--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Welcome To My Portfolio</title>
+    <title>Welcome To My Website</title>
   </head>
 
   <body>
