--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Welcome To My Portfolio</title>
+    <title>Welcome To My Website</title>
   </head>
 
   <body>
